--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,8 +1,8 @@
 /* global overrides */
 
-.unit_list #wrapper, .unit_list .metro_header, .unit_list .metro_footer {
+/* .unit_list #wrapper, .unit_list .metro_header, .unit_list .metro_footer {
     width: 100%
-}
+} */
 
 table.unit-list-2014 td.info {
     width: unset;
@@ -36,6 +36,9 @@ body.unit_list table.unit-list-2014 {
 .mb-3 {
     margin-bottom: 3px;
 }
+.pdleft-15 {
+    padding-left: 15px;
+}
 
 .nns-table {
     width: 100%;
@@ -51,6 +54,37 @@ body.unit_list table.unit-list-2014 {
     text-align: left;
     padding: 6px 0 6px 5px;
     border-bottom: 2px solid #676767;
+}
+
+.high {
+    display: block;
+    width: 0px;
+    height: 0px;
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    border-bottom: 6px solid #02b002;
+}
+
+.low {
+    display: block;
+    width: 0px;
+    height: 0px;
+    border-right: 6px solid transparent;
+    border-left: 6px solid transparent;
+    border-top: 6px solid #CC0202;
+}
+
+.nns-text-grey {
+    color: #656565;
+}
+.nns-text-success {
+    color: #02b002;
+}
+.nns-text-warning {
+    color: #F77B00;
+}
+.nns-text-danger {
+    color: #CC0202;
 }
 
 .nns-button {
@@ -91,31 +125,100 @@ select.nns-select option {
     position: relative;
     display: flex;
     justify-content: center;
-    margin-right: 5px;
 }
 
 .help {
-    width: 15px;
-    height: 15px;
+    width: 16px;
+    height: 16px;
     font-weight: bold;
     color: #fff;
     font-size: 1.2em;
     text-align: center;
     background: #0184D0;
-    line-height: 15px;
+    line-height: 16px;
     border-radius: 8px;
 }
 
-/* Management - prices */
-/* th.management-separator {
-    border-left: 2px solid #676767;
-} */
+/* Management */
+
+#status-bar {
+    width: 100%;
+    margin-bottom: 2px;
+}
+
+#status-bar .header {
+    font-weight: bold;
+    color: #fff;
+    padding: 6px 3px;
+    background: #4e5357;
+}
+#status-bar .body {
+    display: flex;
+    height: 160px;
+    border-left: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    font-size: 0.9em;
+}
+
+#status-bar .body .status {
+    min-width: 400px;
+    padding: 3px;
+}
+
+#status-bar .body .status .status-item {
+    line-height: 18px;
+}
+
+#status-bar .status-label {
+    display: inline-block;
+    width: 100px;
+    font-weight: bold;
+}
+
+#status-bar .body .logs {
+    flex-grow: 1;
+    overflow-y: auto;
+    padding: 3px;
+    border-left: 1px solid #ccc;
+}
+
+#status-bar .price-change-item {
+    position: relative;
+    margin-left: 15px;
+    padding-left: 15px;
+}
+#status-bar .log-prod-img {
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 18px 18px;
+    width: 16px;
+    height: 16px;
+    position: absolute;
+    left: -6px;
+    top: -2px;
+}
+
+body.unit_list table.unit-list-2014 th {
+    padding: 6px 3px;
+    border-width: 1px;
+}
+
+body.unit_list table.unit-list-2014 td.spec,
+body.unit_list table.unit-list-2014 td.geo {
+    white-space: unset;
+    word-wrap: break-word;
+}
+
+body.unit_list table.unit-list-2014 td.alerts {
+    text-align: center;
+}
 
 .management-separator {
     border-left: 1px solid rgb(220, 220, 220, 0.5);
 }
 
-/* End of Management - prices */
+/* End of Management */
 
 /* Shop prices */
 
